# MyKerb

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  settings.cmake
include/: autoconf.h
include/krb5/: krb5.h
include/krb5/error_tables/: asn1_err.h  k5e1_err.h
source/apputils/: daemon.c
source/kadm5/testdir/: acl  db  db.kadm5  dictfile  kdc.conf  krb5_0.rcache2  stash  testlog
source/kdb/: testlog
source/kdb/testdir/: acl  kdc.conf
source/krb5/ccache/: testlog
source/krb5/ccache/testdir/: db  kdc.conf  krb5.conf  stash
source/krb5/ccache/testdir/cc/: tkt1  tkt2  tkt3
source/krb5/krb/: runenv.sh  testlog
source/krb5/krb/testdir/: ccache  db  dictfile  kdc.conf  krb5.conf  stash
source/rpc/unit-test/: testlog
